<resources>
    <string name="app_name">Frutiapp</string>
    <string name="et_nombre">Como te llamas?</string>
    <string name="boton">Jugar</string>
    <string name="descripcion">Descripcion</string>

    <string name="et_vidas">Manzanas: </string>
    <string name="et_respuesta">Respuesta</string>
    <string name="nombre_jugador">Jugador: </string>
    <string name="total_score">Score: 0</string>
    <string name="boton_sumar">Comprobar</string>
</resources>